--- a/scripts/experiment1/all_plots_and_group_analyses.Rmd
+++ b/scripts/experiment1/all_plots_and_group_analyses.Rmd
@@ -74,14 +74,6 @@ fig_each_ptp <- mean_by_rep_long_all_types %>%
                    color=condition)) +
         geom_point(size=1.5) +
         geom_line(size=0.5) +
-        # geom_ribbon(aes(ymin = lower_95_ci,
-        #                 ymax = upper_95_ci,
-        #                 group=condition,
-        #                 color=condition),
-        #             alpha = 0.1,
-        #             colour = NA) +
-
-        # facet_grid(~condition) +
         ggtitle(paste('Learning curvers',sep='')) +
         xlab('Image repetition') +
         ylab('Error') +
@@ -103,7 +95,7 @@ fig_each_ptp <- mean_by_rep_long_all_types %>%
 
 print(fig_each_ptp)
 
-# ggsave(filename = 'learning_rates_all_cond.png', plot = fig_each_ptp, path = './results/experiment1/plots/', width = 5, height = 3, device='png', dpi=300)
+ggsave(filename = 'learning_rates_all_cond.png', plot = fig_each_ptp, path = './results/experiment1/plots/', width = 5, height = 3, device='png', dpi=300)
 
 ```
 
